--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jg-coding",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,7 +12,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^5.3.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-jsx": "^10.0.0",
@@ -25,13 +29,32 @@
     "lint": "^0.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "vide": "^0.5.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-babel-macros": "^1.0.5",
+    "vite-tsconfig-paths": "^3.3.17"
+  },
+  "eslintConfig": {
+    "extends": "./.eslintrc.json"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
