--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
     "vite-plugin-babel-macros": "^1.0.5",
+    "vite-plugin-svgr": "^0.6.0",
     "vite-tsconfig-paths": "^3.3.17"
   },
   "eslintConfig": {
