--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^16.11.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
