--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "^0.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
